--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=your_database_url
-JWT_SECRET=your_jwt_secret
-API_KEY=your_api_key
+DATABASE_URL=postgres://user:password@localhost:5432/mydatabase
+JWT_SECRET=some_jwt_secret_value
+API_KEY=some_api_key_value
