--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://user:password@localhost:5432/mydatabase
+DATABASE_URL=postgres://<username>:<password>@localhost:5432/<dbname>
 JWT_SECRET=some_jwt_secret_value
 API_KEY=some_api_key_value
