--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.4"
   },
-  "author": "New Author Name",
+  "author": "Updated Author Name",
   "license": "MIT"
 }
